update: login fn
